examples/tree/artifacts/tests/entrypoint_branching/result.txt
| Case | ASM (CUs) | Rust (CUs) | Overhead | Overhead % |
|------|-----------|------------|----------|------------|
| No accounts | 5 | 7 | +2 | +40.0% |
| One account | 5 | 7 | +2 | +40.0% |
| Four accounts | 5 | 7 | +2 | +40.0% |
test tests::test_entrypoint_branching ... ok
warning: unused import: `cpi`
 --> tree/src/program.rs:4:17
  |
4 | use interface::{cpi, data, error_codes::error, input_buffer};
  |                 ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
warning: variable does not need to be mutable
   --> tree/src/program.rs:116:9
    |
116 |     let mut pda = MaybeUninit::<Address>::uninit();
    |         ----^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default
warning: variable does not need to be mutable
   --> tree/src/program.rs:117:9
    |
117 |     let mut bump = MaybeUninit::<u8>::uninit();
    |         ----^^^^
    |         |
    |         help: remove this `mut`
warning: `tree` (lib test) generated 3 warnings (run `cargo fix --lib -p tree --tests` to apply 3 suggestions)
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 5 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x1
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 7 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x1
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 5 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x1
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 7 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x1
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 5 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x1
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 7 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x1